# test_proc_service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
src/: config.py  logger.py
src/application/events/: __init__.py  payment_created.py
src/application/exceptions/: __init__.py  base.py  payment.py
src/application/use_cases/payment/: __init__.py  create_payment.py  get_payment.py
src/application/use_cases/processing/: __init__.py  deliver_webhook.py  process_payment.py
src/domain/entities/: __init__.py  outbox_message.py  payment.py
src/domain/enums/: __init__.py  currency.py  outbox_status.py  payment_status.py
src/domain/ports/: __init__.py  payment_gateway.py  webhook_client.py
src/domain/repositories/: __init__.py  outbox_repository.py  payment_repository.py
src/domain/value_objects/: __init__.py  money.py
src/infrastructure/database/sql/: connection.py
src/infrastructure/messaging/: __init__.py  topology.py
src/infrastructure/payment_gateway/: __init__.py  emulated_gateway.py
src/infrastructure/webhook_client/: __init__.py  httpx_webhook_client.py
src/presentation/api/: dependency.py  main.py
src/presentation/api/middlewares/: __init__.py  error.py  logging.py
src/presentation/api/routers/: __init__.py
src/presentation/consumer/: broker.py  dependency.py  main.py  relay.py
src/presentation/consumer/middlewares/: __init__.py  error.py
src/presentation/consumer/routers/: __init__.py  payment.py
tests/unit/: test_payment_entity.py
(+12 files in other folders)
