[project]
name = "payment-processing"
version = "0.1.0"
description = "Асинхронный сервис процессинга платежей"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi==0.128.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "sqlalchemy==2.0.46",
    "asyncpg==0.31.0",
    "faststream[rabbit, cli]==0.6.6",
    "httpx==0.28.1",
    "uvicorn==0.34.0",
    "alembic==1.18.4",
    "greenlet==3.3.1",
]

[dependency-groups]
test = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "ruff>=0.14.4",
]


[tool.uv]
package = false


[tool.pytest.ini_options]
addopts = "-xs"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = [
    "tests/unit",
]


[tool.alembic]
script_location = "%(here)s/src/infrastructure/database/sql/migration"
prepend_sys_path = [
    "src",
    ".",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C"]
ignore = [
    "D100",
    "D104",
    "E501",
    "B008",
    "E101",
]
fixable = ["ALL"]
unfixable = ["B"]
exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "tests/*",
    "src/infrastructure/database/sql/migration/*",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
